exam/02/InventoryTracking/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventorytracking
  namespace: inventory-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventorytracking
  template:
    metadata:
      labels:
        app: inventorytracking
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo
          args:
            - -text=InventoryTracking
          ports:
            - containerPort: 5678
