exam/02/InventoryTracking/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventorytracking-svc
  namespace: inventory-ns
spec:
  type: ClusterIP
  selector:
    app: inventorytracking
  ports:
    - port: 80
      targetPort: 5678
